--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.2.5
+asgiref
 astroid==2.3.3
 certifi==2019.11.28
 chardet==3.0.4
@@ -10,14 +10,14 @@ django-allauth==0.41.0
 django-crispy-forms==1.9.0
 django-heroku==0.3.1
 gunicorn==20.0.4
-idna==2.9
+idna
 isort==4.3.21
-lazy-object-proxy==1.4.3
+lazy-object-proxy
 mccabe==0.6.1
-oauthlib==3.1.0
+oauthlib
 Pillow==8.3.2
 pylint==2.4.4
-PySocks==1.7.1
+PySocks
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.23.0
